# services/moderation/database/models/__init__.py
@@ -1,4 +1,11 @@
 from database.models.card import ModerationCard, ModerationCardStatus
+from database.models.outbox import OutboxEvent, OutboxEventStatus
 from database.models.product_event import ProductEventProcessed
 
-__all__ = ["ModerationCard", "ModerationCardStatus", "ProductEventProcessed"]
+__all__ = [
+	"ModerationCard",
+	"ModerationCardStatus",
+	"OutboxEvent",
+	"OutboxEventStatus",
+	"ProductEventProcessed",
+]
